--- a/hands-on-web-mapping/index.html
+++ b/hands-on-web-mapping/index.html
@@ -12,6 +12,8 @@
     integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo'
     crossorigin='anonymous'></script>
 
+    <script src="static/js/leaflet.ajax.min.js"></script>
+
     <link rel='stylesheet' href='static/css/main.css'>
 </head>
 
